@@ -1,5 +1,6 @@
 [B]0.9.26[/B]
 VIEWTYPES - Fix for Big Posters with Codec Info on
+WIDGETS - Fix busy spinner for mouse mode
 
 [B]0.9.25[/B]
 VIEWTYPES - Add Square Wall Large
